components/ads_8.1/ace.hpp

//-- type declarations -------------------------------------------------------
typedef char *PAceChar;
typedef int __stdcall (*TSQLAbortFunc)(void);
typedef int __stdcall (*TUDFFunc)(void);
typedef int ADSHANDLE;
typedef int *PADSHANDLE;
typedef Word *PWord;
typedef Word UNSIGNED16;
typedef Word *PUNSIGNED16;
typedef unsigned UNSIGNED32;
typedef unsigned *PUNSIGNED32;
extern "C" unsigned __stdcall AdsDDCreate(char * pucDictionaryPath, Word usEncrypt, char * pucDescription, PADSHANDLE phDictionary);
extern "C" unsigned __stdcall AdsDDCreateRefIntegrity(int hDictionary, char * pucRIName, char * pucFailTableName, char * pucParentTableName, char * pucParentTagName, char * pucChildTableName, char * pucChildTagName, Word usUpdateRule, Word usDeleteRule);
extern "C" unsigned __stdcall AdsDDAddIndexFile(int hDictionary, char * pucTableName, char * pucIndexFileName, char * pucComment);
extern "C" unsigned __stdcall AdsDDRemoveIndexFile(int hDictonary, char * pucTableName, char * pucIndexFileName, Word ucDeletedFile);
extern "C" unsigned __stdcall AdsDDRenameObject(int hDictionary, char * pucObjectName, char * pucNewObjectName, Word usObjectType, unsigned ulOptions);
extern "C" unsigned __stdcall AdsDDGetFieldProperty(int hObject, char * pucTableName, char * pucFieldName, Word usPropertyID, char * pucProperty, PUNSIGNED16 pusPropertyLen);
extern "C" unsigned __stdcall AdsDDGetIndexFileProperty(int hObject, char * pucTableName, char * pucIndexFileName, Word usPropertyID, void * pvProperty, PUNSIGNED16 pusPropertyLen);
extern "C" unsigned __stdcall AdsDDGetIndexProperty(int hObject, char * pucTableName, char * pucIndexName, Word usPropertyID, void * pvProperty, PUNSIGNED16 pusPropertyLen);
extern "C" unsigned __stdcall AdsDDSetFieldProperty(int hDictionary, char * pucTableName, char * pucFieldName, Word usPropertyID, void * pvProperty, Word usPropertyLength, Word usValidateOption, char * pucFailTable);
extern "C" unsigned __stdcall AdsConnect60(char * pucServerPath, Word usServerTypes, char * pucUserName, char * pucPassword, unsigned ulOptions, PADSHANDLE phConnect);
extern "C" unsigned __stdcall AdsDDGetTableProperty(int hObject, char * pucTableName, Word usPropertyID, void * pvProperty, PUNSIGNED16 pucPropertyLen);
extern "C" unsigned __stdcall AdsDDSetTableProperty(int hDictionary, char * pucTableName, Word usPropertyID, void * pvProperty, Word usPropertyLen, Word usValidateOption, char * pucFailTable);
extern "C" unsigned __stdcall AdsDDRemoveTable(int hObject, char * pucTableName, Word usDeleteFile);
extern "C" unsigned __stdcall AdsDDFindClose(int hObject, int hFindHandle);
extern "C" unsigned __stdcall AdsDDFindNextObject(int hObject, int hFindHandle, char * pucObjectName, PUNSIGNED16 pusObjectNameLen);
extern "C" unsigned __stdcall AdsDDFindFirstObject(int hObject, Word usObjectType, char * pucParentName, char * pucObjectName, PUNSIGNED16 pusObjectNameLen, PADSHANDLE phFindHandle);
extern "C" unsigned __stdcall AdsDDAddTable(int hDictionary, char * pucTableName, char * pucTablePath, Word usTableType, Word usCharType, char * pucIndexFiles, char * pucComments);
extern "C" unsigned __stdcall AdsDDGetDatabaseProperty(int hDictionary, Word usPropertyID, void * pucProperty, PUNSIGNED16 pusPropertyLen);
extern "C" unsigned __stdcall AdsDDSetDatabaseProperty(int hDictionary, Word usPropertyID, void * pvProperty, Word usPropertyLen);
extern "C" unsigned __stdcall AdsClearSQLAbortFunc(void);
extern "C" unsigned __stdcall AdsClearSQLParams(int hStatement);
extern "C" unsigned __stdcall AdsCloseSQLStatement(int hStatement);
extern "C" unsigned __stdcall AdsCreateSQLStatement(int hConnect, PADSHANDLE phStatement);
extern "C" unsigned __stdcall AdsCustomizeAOF(int hTable, unsigned ulNumRecords, PUNSIGNED32 pulRecords, Word usOption);
extern "C" unsigned __stdcall AdsExecuteSQL(int hStatement, PADSHANDLE phCursor);
extern "C" unsigned __stdcall AdsExecuteSQLDirect(int hStatement, char * pucSQL, PADSHANDLE phCursor);
extern "C" unsigned __stdcall AdsIsRecordInAOF(int hTable, unsigned ulRecordNum, PWord pusIsInAOF);
extern "C" unsigned __stdcall AdsPrepareSQL(int hStatement, char * pucSQL);
extern "C" unsigned __stdcall AdsRegisterSQLAbortFunc(TSQLAbortFunc Callback);
extern "C" unsigned __stdcall AdsSetTimeStamp(int hObj, char * pucFldName, char * pucBuf, unsigned ulLen);
extern "C" unsigned __stdcall AdsStmtConstrainUpdates(int hStatement, Word usConstrain);
extern "C" unsigned __stdcall AdsStmtSetTableCharType(int hStatement, Word usCharType);
extern "C" unsigned __stdcall AdsStmtSetTableLockType(int hStatement, Word usLockType);
extern "C" unsigned __stdcall AdsStmtSetTableReadOnly(int hStatement, Word usReadOnly);
extern "C" unsigned __stdcall AdsStmtSetTableRights(int hStatement, Word usCheckRights);
extern "C" unsigned __stdcall AdsStmtSetTableType(int hStatement, Word usTableType);
extern "C" unsigned __stdcall AdsStmtEnableEncryption(int hStatement, char * pcPassword);
extern "C" unsigned __stdcall AdsStmtDisableEncryption(int hStatement);
extern "C" unsigned __stdcall AdsStmtSetTablePassword(int hStatement, char * pcTableName, char * pcPassword);
extern "C" unsigned __stdcall AdsStmtClearTablePasswords(int hStatement);
extern "C" unsigned __stdcall AdsStmtReadAllColumns(int hStatement, Word usReadColumns);
extern "C" unsigned __stdcall AdsIsIndexUserDefined(int hIndex, PUNSIGNED16 pbUserDefined);
extern "C" unsigned __stdcall AdsRegisterUDF(int hObj, Word usType, TUDFFunc Callback);