components/ads_8.1/ace.pas


   function AdsCustomizeAOF( hTable: ADSHANDLE;
                             ulNumRecords: UNSIGNED32;
                             pulRecords: pUNSIGNED32;
                             usOption: Word ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsRecordInAOF( hTable: ADSHANDLE;
                              ulRecordNum: UNSIGNED32;
                              pusIsInAOF: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}


   function AdsCreateSQLStatement( hConnect : ADSHANDLE;
                                   phStatement : pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsPrepareSQL( hStatement : ADSHANDLE;
                           pucSQL : PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsExecuteSQL( hStatement : ADSHANDLE;
                           phCursor : pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsExecuteSQLDirect( hStatement : ADSHANDLE;
                                 pucSQL : PAceChar;
                                 phCursor : pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsCloseSQLStatement( hStatement : ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsStmtSetTableRights( hStatement : ADSHANDLE;
                                   usCheckRights : WORD ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsStmtSetTableReadOnly( hStatement : ADSHANDLE;
                                     usReadOnly : UNSIGNED16 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsStmtSetTableLockType( hStatement : ADSHANDLE;
                                     usLockType : UNSIGNED16 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsStmtSetTableCharType( hStatement : ADSHANDLE;
                                     usCharType : UNSIGNED16 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsStmtSetTableType( hStatement : ADSHANDLE;
                                 usTableType : UNSIGNED16 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsStmtEnableEncryption( hStatement : ADSHANDLE;
                                     pcPassword : PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsStmtDisableEncryption( hStatement : ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsStmtSetTablePassword( hStatement  : ADSHANDLE;
                                     pcTableName : PAceChar;
                                     pcPassword  : PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsStmtClearTablePasswords( hStatement : ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsStmtReadAllColumns( hStatement : ADSHANDLE;
                                   usReadColumns : UNSIGNED16 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsSetTimeStamp( hObj : ADSHANDLE;
                             pucFldName : PAceChar;
                             pucBuf : PAceChar;
                             ulLen : UNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsClearSQLParams( hStatement : ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsStmtConstrainUpdates( hStatement : ADSHANDLE;
                                     usConstrain : UNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsClearSQLAbortFunc: UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsRegisterSQLAbortFunc( Callback: TSQLAbortFunc ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsIndexUserDefined( hIndex : ADSHANDLE;
                                   pbUserDefined : PUNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsRegisterUDF( hObj: ADSHANDLE;
                            usType : UNSIGNED16;
                            Callback: TUDFFunc ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDCreate( pucDictionaryPath : PAceChar;
                         usEncrypt : UNSIGNED16;
                         pucDescription : PAceChar;
                         phDictionary : PADSHANDLE ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDSetDatabaseProperty( hDictionary : ADSHANDLE;
                              usPropertyID : UNSIGNED16;
                              pvProperty : pointer;
                              usPropertyLen : UNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDGetDatabaseProperty( hDictionary : ADSHANDLE;
                                      usPropertyID : UNSIGNED16;
                                      pucProperty : pointer;
                                      pusPropertyLen : PUNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDAddTable( hDictionary   : ADSHANDLE;
                           pucTableName  : PAceChar;
                           pucTablePath  : PAceChar;
                           usTableType   : UNSIGNED16;
                           usCharType    : UNSIGNED16;
                           pucIndexFiles : PAceChar;
                           pucComments   : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDFindFirstObject( hObject : ADSHANDLE;
                                  usObjectType : UNSIGNED16;
                                  pucParentName : PAceChar;
                                  pucObjectName : PAceChar;
                                  pusObjectNameLen : PUNSIGNED16;
                                  phFindHandle : PADSHANDLE ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDFindNextObject( hObject : ADSHANDLE;
                                 hFindHandle : ADSHANDLE;
                                 pucObjectName : PAceChar;
                                 pusObjectNameLen : PUNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDFindClose( hObject : ADSHANDLE; hFindHandle : ADSHANDLE ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDRemoveTable( hObject : ADSHANDLE;
                              pucTableName : PAceChar;
                              usDeleteFile : UNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDRenameObject( hDictionary : ADSHANDLE;
                               pucObjectName : PAceChar;
                               pucNewObjectName : PAceChar;
                               usObjectType : UNSIGNED16;
                               ulOptions : UNSIGNED32 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDSetTableProperty( hDictionary : ADSHANDLE;
                                   pucTableName : PAceChar;
                                   usPropertyID : UNSIGNED16;
                                   pvProperty : pointer;
                                   usPropertyLen : UNSIGNED16;
                                   usValidateOption : UNSIGNED16;
                                   pucFailTable : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDGetTableProperty( hObject : ADSHANDLE;
                                 pucTableName : PAceChar;
                                 usPropertyID : UNSIGNED16;
                                 pvProperty : pointer;
                                 pucPropertyLen : PUNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsConnect60( pucServerPath : PAceChar;
                          usServerTypes : UNSIGNED16;
                          pucUserName   : PAceChar;
                          pucPassword   : PAceChar;
                          ulOptions     : UNSIGNED32;
                          phConnect     : PADSHANDLE ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDSetFieldProperty( hDictionary : ADSHANDLE;
                                   pucTableName : PAceChar;
                                   pucFieldName : PAceChar;
                                   usPropertyID : UNSIGNED16;
                                   pvProperty : pointer;
                                   usPropertyLength : UNSIGNED16;
                                   usValidateOption : UNSIGNED16;
                                   pucFailTable : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDGetFieldProperty( hObject : ADSHANDLE;
                                   pucTableName : PAceChar;
                                   pucFieldName : PAceChar;
                                   usPropertyID : UNSIGNED16;
                                   pucProperty : PAceChar;
                                   pusPropertyLen : PUNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDGetIndexFileProperty( hObject : ADSHANDLE;
                                       pucTableName : PAceChar;
                                       pucIndexFileName : PAceChar;
                                       usPropertyID : UNSIGNED16;
                                       pvProperty : pointer;
                                       pusPropertyLen : PUNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDGetIndexProperty( hObject : ADSHANDLE;
                                   pucTableName : PAceChar;
                                   pucIndexName : PAceChar;
                                   usPropertyID : UNSIGNED16;
                                   pvProperty : pointer;
                                   pusPropertyLen : PUNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDRemoveIndexFile( hDictonary       : ADSHANDLE;
                                  pucTableName     : PAceChar;
                                  pucIndexFileName : PAceChar;
                                  ucDeletedFile    : UNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDAddIndexFile( hDictionary : ADSHANDLE;
                               pucTableName : PAceChar;
                               pucIndexFileName : PAceChar;
                               pucComment : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDCreateRefIntegrity( hDictionary : ADSHANDLE;
                                     pucRIName : PAceChar;
                                     pucFailTableName : PAceChar;
                                     pucParentTableName : PAceChar;
                                     pucParentTagName : PAceChar;
                                     pucChildTableName : PAceChar;
                                     pucChildTagName : PAceChar;
                                     usUpdateRule : UNSIGNED16;
                                     usDeleteRule : UNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
